# tairseach

./: .gitignore  AUDIT-2026-02-15.md  BUGFIX-onepassword-ffi.md  BUILD.md  CLAUDE.md  Cargo.toml  DEALBHOIR-CRITICAL-FIX-REPORT.md  DEALBHOIR-EXECUTION-REPORT.md  DREACHT.md  EXECUTION_REPORT.md  FDA_RECOVERY.md  FFI_FIX_REPORT.md  FIODOIR-CONVENTION-REPORT.md  FIODOIR-EXECUTION-REPORT.md  FIODOIR-RENAME-REPORT.md  GWRHYR-EXECUTION-REPORT.md  GWRHYR-REUSE-CHECK.md  HANDLER_DRY_EXECUTION_REPORT.md  HANDLER_REFACTOR_REPORT.md  HANDLER_REFACTOR_SUMMARY.md  IMPLEMENTATION_REPORT.md  LOCALIZATION_AUDIT.md  PERMISSION_AUDIT.md  PROGRESS.md  QA-ENDPOINT-STATUS.md  README.md  ROUTING_FIX_REPORT.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js  test_routing.sh  vite.config.ts
clients/node/: README.md  package-lock.json  package.json
crates/tairseach-mcp/: Cargo.toml  README.md
crates/tairseach-mcp/src/: bridge.rs  initialize.rs  main.rs  protocol.rs  tools.rs
crates/tairseach-protocol/: Cargo.toml
docs/: heartbeat-migration-plan.md  icon-audit.md  launchd-cutover-report.md  mcp-codebase-analysis.md  migration-risk-analysis.md  onepassword-ffi-symbols.md  optimization-reference.md  rust-core-dry-refactoring.md  script-audit.md  script-cutover-plan.md  verification-report-2026-02-13.md  vue-performance-assessment.md  vue-performance-audit.md
docs/ai/: context.md  status.md
docs/architecture/: README.md  auth-system.md  core-server.md  deployment.md  frontend.md  google-integration.md  handlers.md  manifest-system.md  mcp-bridge.md  permissions.md  router.md
docs/reference/: README.md  config-reference.md  credential-types.md  environment.md  handler-reference.md  manifest-schema.md  mcp-tools.md  permission-types.md  socket-protocol.md  (+1 more)
quickrefs/: binary-bundling-pattern.md  frontend-performance-pattern.md
scripts/: README-DMG-POLISH.md  build-and-launch.sh  build-dmg.sh  build.sh  create-rounded-volume-icon.sh  deploy-bolcain.sh  gog-proxy  patch-dmg-script.sh  patch-info-plist.sh  polish-dmg.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: tairseach-mcp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/helpers/onepassword/: build.sh  go.mod  main.go
src-tauri/icons/: VolumeIcon.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: credential_types.rs  crypto.rs  mod.rs  store.rs
src-tauri/src/auth/provider/: google.rs  mod.rs  onepassword.rs
src-tauri/src/common/: error.rs  http.rs  interpolation.rs  mod.rs  paths.rs  result.rs
src-tauri/src/config/: mod.rs
src-tauri/src/contacts/: mod.rs
src-tauri/src/google/: calendar_api.rs  client.rs  common.rs  gmail.rs  mod.rs
src-tauri/src/manifest/: loader.rs  mod.rs  registry.rs  types.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/permissions/: accessibility.rs  automation.rs  calendar.rs  camera.rs  contacts.rs  full_disk.rs  location.rs  microphone.rs  mod.rs  photos.rs  reminders.rs  screen_recording.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/proxy/: mod.rs  protocol.rs  server.rs
src-tauri/src/proxy/handlers/: auth.rs  automation.rs  calendar.rs  camera.rs  common.rs  config.rs  contacts.rs  contacts.rs.bak  files.rs  gmail.rs  google_calendar.rs  google_contacts.rs  jira.rs  location.rs  mod.rs  onepassword.rs  oura.rs  permissions.rs  photos.rs  reminders.rs  screen.rs
src-tauri/src/router/: dispatcher.rs  internal.rs  mod.rs  proxy.rs  script.rs
(+93 files in other folders)
