[workspace]
members = [
  "src-tauri",
  "crates/tairseach-protocol",
  "crates/tairseach-mcp"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Naonúr"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
